--- a/EduClass.Web/Views/Pages/Create.cshtml
+++ b/EduClass.Web/Views/Pages/Create.cshtml
@@ -9,7 +9,7 @@
         <ul class="panel-options">
             <li><a><i class="fa fa-refresh"></i></a></li>
         </ul>
-        <h4 class="panel-title text-success">Crea una página públic</h4>
+        <h4 class="panel-title text-success">Crea una página pública</h4>
 
     </div>
     <div class="panel-body">
@@ -39,15 +39,12 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Crear" class="btn btn-success" />
+                        <input type="submit" value="Crear" class="btn btn-primary pull-right" />
+                        <a href="@Url.Action("Index")" class="btn btn-default-active pull-right mr10">Volver</a>
                     </div>
                 </div>
             </div>
         }
-    </div>
-
-    <div>
-        @Html.ActionLink("Volver", "Index")
     </div>
 </div>
 
