--- a/EduClass.Web/Views/Pages/Edit.cshtml
+++ b/EduClass.Web/Views/Pages/Edit.cshtml
@@ -42,9 +42,8 @@
 
 
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Guardar" class="btn btn-success" />
-                    </div>
+                    <input type="submit" value="Guardar" class="btn btn-primary pull-right" />
+                    <a href="@Url.Action("Index")" class="btn btn-default-active pull-right mr10">Volver</a>
                 </div>
             </div>
         }
