--- a/EduClass.Web/Views/Pages/Index.cshtml
+++ b/EduClass.Web/Views/Pages/Index.cshtml
@@ -5,90 +5,92 @@
 @{
     ViewBag.Title = "Páginas Publicas";
 }
-<h2>Páginas Públicas</h2>
-<div class="row">
-    <div class="col-sm-8 col-md-9 col-lg-10">
-        @if (UserSession.GetCurrentUser() is Teacher)
-        {
-            <div class="well well-asset-options clearfix">
-                <div class="btn-toolbar btn-toolbar-media-manager pull-left" role="toolbar">
-                    <a class="btn btn-danger btn-quirk btn-block mb20" href="@Url.Action("Create", "Pages")">Crear nueva Página</a>
-                </div><!-- btn-toolbar -->
 
-            
-            </div>
-        }
-        <div class="row filemanager">
-            @foreach (var elemento in Model)
-            {
-                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 video">
-                    <div class="thmb">
-                    @if (UserSession.GetCurrentUser() is Teacher)
+<div class="panel">
+    <div class="panel-heading">
+        <h4 class="panel-title">Páginas públicas</h4>
+    </div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-12">
+                @if (UserSession.GetCurrentUser() is Teacher)
+                {
+                    <div class="well well-asset-options clearfix">
+                        <div class="btn-toolbar btn-toolbar-media-manager pull-right" role="toolbar">
+                            <a class="btn btn-primary btn-quirk btn-block" href="@Url.Action("Create", "Pages")">Crear nueva Página</a>
+                        </div><!-- btn-toolbar -->
+
+
+                    </div>
+                }
+                <div class="row filemanager">
+                    @foreach (var elemento in Model)
                     {
-                        <div class="btn-group fm-group">
-                            <button type="button" class="btn btn-default dropdown-toggle fm-toggle" data-toggle="dropdown">
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu pull-right fm-menu" role="menu">
-                                
-                                <li><a href="@Url.Action("Edit", "Pages", new { id = elemento.Id })"><i class="fa fa-pencil"></i>Editar</a> </li>                                
-                                @using (Html.BeginForm("Disable", "Pages", FormMethod.Post, htmlAttributes: new { @Id = elemento.Id }))
+                        <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 video">
+                            <div class="thmb">
+                                @if (UserSession.GetCurrentUser() is Teacher)
                                 {
-                                    @Html.AntiForgeryToken()
-                                    <li><input type="hidden" name="id" value="@elemento.Id" /></li>
-                                    <li>
-                                        @if (elemento.Enabled == true)
-                                        {
-                                            <button type="submit" class="btn btn-link">
-                                                <i class="fa fa-close"></i>
-                                                Inactivar
-                                            </button>
-                                        }
-                                        else
-                                        {
-                                            <button type="submit" class="btn btn-link">
-                                                <i class="fa fa-check"></i>
-                                                Activar
-                                            </button>
-                                        }
-                                    </li>
-                                }
-                                @using (Html.BeginForm("Delete", "Pages", FormMethod.Post, htmlAttributes: new { @Id = elemento.Id }))
-                                {
-                                    @Html.AntiForgeryToken()
-                                    <li><input type="hidden" name="id" value="@elemento.Id" /></li>
-                                    <li>
-                                        <button type="submit" class="btn btn-link">
-                                           <i class="fa fa-trash"></i>
-                                           Eliminar
+                                    <div class="btn-group fm-group">
+                                        <button type="button" class="btn btn-default dropdown-toggle fm-toggle" data-toggle="dropdown">
+                                            <span class="caret"></span>
                                         </button>
-                                        
-                                    </li>
+                                        <ul class="dropdown-menu pull-right fm-menu" role="menu">
+
+                                            <li><a href="@Url.Action("Edit", "Pages", new { id = elemento.Id })"><i class="fa fa-pencil"></i>Editar</a> </li>
+                                            @using (Html.BeginForm("Disable", "Pages", FormMethod.Post, htmlAttributes: new { @Id = elemento.Id }))
+                                            {
+                                                @Html.AntiForgeryToken()
+                                                <li><input type="hidden" name="id" value="@elemento.Id" /></li>
+                                                <li>
+                                                    @if (elemento.Enabled == true)
+                                                    {
+                                                        <button type="submit" class="btn btn-link">
+                                                            <i class="fa fa-close"></i>
+                                                            Inactivar
+                                                        </button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button type="submit" class="btn btn-link">
+                                                            <i class="fa fa-check"></i>
+                                                            Activar
+                                                        </button>
+                                                    }
+                                                </li>
+                                            }
+                                            @using (Html.BeginForm("Delete", "Pages", FormMethod.Post, htmlAttributes: new { @Id = elemento.Id }))
+                                            {
+                                                @Html.AntiForgeryToken()
+                                                <li><input type="hidden" name="id" value="@elemento.Id" /></li>
+                                                <li>
+                                                    <button type="submit" class="btn btn-link">
+                                                        <i class="fa fa-trash"></i>
+                                                        Eliminar
+                                                    </button>
+
+                                                </li>
+                                            }
+                                        </ul>
+                                    </div><!-- btn-group -->
                                 }
-                            </ul>
-                        </div><!-- btn-group -->
+                                <div class="thmb-prev">
+                                    <a href="@Url.Action("ViewPage", "Pages", new { pageId = elemento.Id })">
+                                        <img src="@Url.Content("~/Content/images/images_file.png")" class="img-responsive" alt="" />
+                                    </a>
+                                </div>
+                                <h5 class="fm-title"><a href="@Url.Action("ViewPage", "Pages", new { pageId = elemento.Id })">@elemento.Name</a></h5>
+                                <small class="text-muted">Creado: @elemento.CreatedAt</small>
+                            </div><!-- thmb -->
+                        </div><!-- col-xs-6 -->
                     }
-                        <div class="thmb-prev">
-                            <a href="@Url.Action("ViewPage", "Pages", new { pageId = elemento.Id })">
-                                <img src="@Url.Content("~/Content/images/images_file.png")" class="img-responsive" alt="" />
-                            </a>
-                        </div>
-                        <h5 class="fm-title"><a href="@Url.Action("ViewPage", "Pages", new { pageId = elemento.Id })">@elemento.Name</a></h5>
-                        <small class="text-muted">Creado: @elemento.CreatedAt</small>
-                    </div><!-- thmb -->
-                </div><!-- col-xs-6 -->
-            }
 
-        </div><!-- row -->
-    </div><!-- col-sm-9 -->
-    <div class="col-sm-4 col-md-3 col-lg-2">
-        <div class="fm-sidebar">
-
-
-            
-
-            <div class="mb30 clearfix"></div>
-
+                </div><!-- row -->
+            </div><!-- col-sm-9 -->
+            <div class="col-sm-4 col-md-3 col-lg-2">
+                <div class="fm-sidebar">
+                    <div class="mb30 clearfix"></div>
+                </div>
+            </div><!-- col-sm-3 -->
         </div>
     </div><!-- col-sm-3 -->
 </div>
